--- a/webstoryboy/site2023-main/layoutType/layout01_02.html
+++ b/webstoryboy/site2023-main/layoutType/layout01_02.html
@@ -18,7 +18,8 @@
             margin: 0 auto;
         }
         #header {
-            width: 100%;
+            /* 부모기준(여기서는 wrap 기준) */
+            width: 100%;  
             height: 100px;
             background-color: #FFE0B2;
         }
@@ -47,6 +48,7 @@
         }
 
         /* 미디어쿼리 */
+        /* 반응형 만들 때 가로에 스크롤 바 생기면 안된다 */
         @media (max-width: 1300px){
             #wrap {
                 width: 96%;
