--- a/webstoryboy/site2023-main/layoutType/layout01_03.html
+++ b/webstoryboy/site2023-main/layoutType/layout01_03.html
@@ -16,7 +16,9 @@
         #wrap {
             width: 1200px;
             margin: 0 auto;
+            /* 기본적으로 Flexbox는 한 줄로 자식 요소들을 배치하려고 한다. */
             display: flex;
+            /*  Flexbox에서 자식 요소들이 한 줄에 다 들어가지 않을 경우 다음 줄로 줄바꿈함. */
             flex-wrap: wrap;
         }
         #header {
