- clear와 overflow: float 버그 예방가능

--- a/webstoryboy/site2023-main/layoutType/01/layout01_03.html
+++ b/webstoryboy/site2023-main/layoutType/01/layout01_03.html
@@ -19,6 +19,7 @@
             /* 기본적으로 Flexbox는 한 줄로 자식 요소들을 배치하려고 한다. */
             display: flex;
             /*  Flexbox에서 자식 요소들이 한 줄에 다 들어가지 않을 경우 다음 줄로 줄바꿈함. */
+            /*  미 사용 시 wrap에 한 줄에 배치하기 위해 width 비율이 1 1 0.3 0.7 1 이렇게 된다 */
             flex-wrap: wrap;
         }
         #header {
