--- a/webstoryboy/site2023-main/layoutType/02/layout02_01.html
+++ b/webstoryboy/site2023-main/layoutType/02/layout02_01.html
@@ -29,6 +29,7 @@
         }
         #main {
             width: 1200px;
+            /* overflow사용 시 float의 height: 0 버그 예방가능 */
             overflow: hidden;
         }
         #aside {
