--- a/webstoryboy/site2023-main/layoutType/02/layout02_04.html
+++ b/webstoryboy/site2023-main/layoutType/02/layout02_04.html
@@ -18,6 +18,7 @@
             margin: 0 auto;
         }
         #header {
+            /* width: 100% 생략가능 */
             height: 100px;
             background-color: #C8E6C9;
         }
@@ -58,6 +59,7 @@
                 width: 100%;
             }
             #main { 
+                /*  Flexbox에서 자식 요소들이 한 줄에 다 들어가지 않을 경우 다음 줄로 줄바꿈함. */
                 flex-wrap: wrap;
             }
             #aside {
