--- a/webstoryboy/site2023-main/layoutType/02/layout02_06.html
+++ b/webstoryboy/site2023-main/layoutType/02/layout02_06.html
@@ -58,7 +58,9 @@
                     "aside section"
                     "article article"
                 ;
+                /* aside section의 width 각각 30% 70% */
                 grid-template-columns: 30% 70%;
+                /*  각 층의 height */
                 grid-template-rows: 680px 150px;
             }
             #aside {
