--- a/webstoryboy/site2023-main/layoutType/01/layout01_01.html
+++ b/webstoryboy/site2023-main/layoutType/01/layout01_01.html
@@ -51,7 +51,7 @@
             width: 1200px;
             height: 100px;
             background-color: #FF9800;
-            /* 버그를 고치는 clear */
+            /* 버그를 고치려면 안 보이는 곳에서 clear 사용 */
             /* 왼쪽이든 오른쪽이든 float된 요소가 있으면 그 옆에 위치하지 않도록 막기위해 줄 바꿈함. */
             clear: both;    
         }
