--- a/webstoryboy/site2023-main/layoutType/03/layout03_02.html
+++ b/webstoryboy/site2023-main/layoutType/03/layout03_02.html
@@ -14,6 +14,7 @@
             background-color: #E1F5FE;
         }
         #wrap {
+            /* 100%는 생략가능 */
             width: 1200px;
             margin: 0 auto;
         }
@@ -32,6 +33,7 @@
             width: 30%;
             height: 780px;
             background-color: #4FC3F7;
+            /* block일 때 한 줄에 여러개 배치하기위한 float */
             float: left;
         }
         #article1 {
