--- a/webstoryboy/site2023-main/layoutType/03/layout03_03.html
+++ b/webstoryboy/site2023-main/layoutType/03/layout03_03.html
@@ -29,7 +29,8 @@
             display: flex;
             flex-wrap: wrap;
             flex-direction: column;
-            height: 780px;
+            /* height값을 지정해야 원하는대로 가능*/
+            height: 780px; 
         }
         #aside {
             width: 30%;
