- 레이아웃4유형은 실무에서 가장 많이 쓰인다. - height: inherit

--- a/webstoryboy/site2023-main/layoutType/04/layout04_01.html
+++ b/webstoryboy/site2023-main/layoutType/04/layout04_01.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>레이아웃 유형4</title>
+    <!-- 실무에서 제일 많이 쓰는 유형 -->
     <style>
         * {
             margin: 0;
