--- a/webstoryboy/site2023-main/layoutType/04/layout04_03.html
+++ b/webstoryboy/site2023-main/layoutType/04/layout04_03.html
@@ -35,6 +35,7 @@
         }
         .container {
             width: 1200px;
+            /* 부모의 height 값 상속가능 */
             height: inherit;
             background-color: rgba(0,0,0,0.1);
             margin: 0 auto;
@@ -43,6 +44,7 @@
 </head>
 <body>
     <div id="wrap">
+        <!-- id는 한 곳에서, 클래스는 여러 곳에서 사용한다 -->
         <header id="header">
             <div class="container"></div>
         </header>
