- css repeat() - 1fr

--- a/webstoryboy/site2023-main/layoutType/05/layout05_02.html
+++ b/webstoryboy/site2023-main/layoutType/05/layout05_02.html
@@ -68,6 +68,7 @@
         }
 
         /* 미디어쿼리 */
+        /* 여유롭게 잡아서 1300px */
         @media (max-width: 1300px){
             .container {
                 width: 96%;
