--- a/webstoryboy/site2023-main/layoutType/05/layout05_03.html
+++ b/webstoryboy/site2023-main/layoutType/05/layout05_03.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- 5번 유형은 flex로 하면 복잡해서 grid 방식으로 추천 -->
     <style>
         * {
             margin: 0;
