--- a/webstoryboy/site2023-main/layoutType/05/layout05_04.html
+++ b/webstoryboy/site2023-main/layoutType/05/layout05_04.html
@@ -161,6 +161,7 @@
         </div>
         <div id="main">
             <div class="contents container">
+                <!-- flex의 한계로 구조를 다르게 해야함 -->
                 <div class="left">
                     <div class="cont1"></div>
                 </div>
