--- a/webstoryboy/site2023-main/sliderType/slider01.html
+++ b/webstoryboy/site2023-main/sliderType/slider01.html
@@ -23,14 +23,25 @@
             text-decoration: none;
             color: #000;
         }
+        
+        /* blind
+            - 텍스트는 보이지 않고 스크린 리더용
+        */
         .blind {
             width: 0;
             height: 0;
             line-height: 0;
             overflow: hidden;
             position: absolute;
+            /* 텍스트를 화면 밖으로 밀어냄 */
             text-indent: -9999px;
         }
+
+        /* Image Replacement( 이미지 대체 텍스트 숨김 )
+            - 텍스트는 시각적으로 숨기고
+            - 대신 이미지를 보여주되
+            - 스크린 리더에서는 텍스트가 읽히게 하기 위함
+        */
         .ir {
             display: block;
             overflow: hidden;
@@ -58,6 +69,7 @@
             border-radius: 30px;
             text-transform: uppercase;
             margin-bottom: 10px;
+            /* padding, margin의 top, bottom속성이 inline일 때에는 적용이 잘 안된다. */
             display: inline-block;
         }
         .slider__img .desc h3 {
