텍스트 두줄효과

--- a/webstoryboy/site2023-main/imageType/image01.html
+++ b/webstoryboy/site2023-main/imageType/image01.html
@@ -77,6 +77,7 @@
             line-height: 1.4;
             font-weight: 300;
             padding-right: 100px;
+            /* 텍스트 두 줄로 */
             overflow: hidden;
             text-overflow: ellipsis;
             display: -webkit-box;
