- 텍스트 n줄효과

--- a/webstoryboy/site2023-main/cardType/card01.html
+++ b/webstoryboy/site2023-main/cardType/card01.html
@@ -41,6 +41,7 @@
         }
         .section > h2 {
             font-size: 50px;
+            /*  텍스트가 한 줄 짜리는 line-height값을 1로 하는게 좋다 */
             line-height: 1;
             margin-bottom: 20px;
             text-align: center;
@@ -77,10 +78,11 @@
             color: #666;
             margin-bottom: 20px;
             font-weight: 300;
+            /* 텍스트 4줄효과 */
             overflow: hidden;
-            text-overflow: ellipsis;
+            text-overflow: ellipsis;  /* 잘린 텍스트를 말줄임표(...)로 바꿈*/
             display: -webkit-box;
-            -webkit-line-clamp: 4; 
+            -webkit-line-clamp: 4;     /* 제한할 라인 수 설정 */ 
             -webkit-box-orient: vertical;
         }
         .card__body .btn {
@@ -103,9 +105,10 @@
                 </figure>
                 <div class="card__body">
                     <h3 class="tit">웹표준 사이트 만들기</h3>
-                    <p class="desc">사이트를 만들기 위한 기초 강의입니다. 기본 코딩에 대한 감각을 익히고, 웹 표준을 준수하면서 코딩하는 방법을 익힙니다. 다양한 예제를 통해 사이트를 만드는</p>
+                    <p class="desc">사이트를 만들기 위한 기초 강의입니다. 기본 코딩에 대한 감각을 익히고, 웹 표준을 준수하면서 코딩하는 방법을 익힙니다. 다양한 예제를 통해 사이트를 만드는 과정을 익힙니다.</p>
                     <a class="btn" href="/">
                         더 자세히 보기 
+                        <!-- 이렇게 하는 방법도 있다 정도로 확인, 원래는 백그라운드로 화살표 처리함 -->
                         <span aria-hidden="true">
                             <svg width="52" height="8" viewBox="0 0 52 8" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M51.3536 4.35355C51.5488 4.15829 51.5488 3.84171 51.3536 3.64645L48.1716 0.464466C47.9763 0.269204 47.6597 0.269204 47.4645 0.464466C47.2692 0.659728 47.2692 0.976311 47.4645 1.17157L50.2929 4L47.4645 6.82843C47.2692 7.02369 47.2692 7.34027 47.4645 7.53553C47.6597 7.7308 47.9763 7.7308 48.1716 7.53553L51.3536 4.35355ZM0 4.5H51V3.5H0V4.5Z" fill="#5B5B5B"/>
