--- a/webstoryboy/site2023-main/textType/text01_03.html
+++ b/webstoryboy/site2023-main/textType/text01_03.html
@@ -42,7 +42,8 @@
             margin-bottom: 70px;
         }
         .section span {
-            display: block;
+            /* margin-bottom을 잘 적용시키려고 block적용 */
+            display: block; 
             text-align: center;
             font-size: 16px;
             text-decoration: underline;
