--- a/webstoryboy/site2023-main/textType/text01.html
+++ b/webstoryboy/site2023-main/textType/text01.html
@@ -42,6 +42,7 @@
             margin-bottom: 70px;
         }
         .section span {
+            /* margin-bottom을 잘 적용시키려고 block적용 */
             display: block;
             text-align: center;
             font-size: 16px;
