--- a/webstoryboy/site2023-main/textType/text01_04.html
+++ b/webstoryboy/site2023-main/textType/text01_04.html
@@ -68,7 +68,7 @@
         }
         .text__title {
             font-size: 24px;
-            line-height: 1;
+            line-height: 1;   /* 한줄이면 1로 설정 */
             margin-bottom: 10px;
             white-space: nowrap;
             overflow: hidden;
